@startuml
'https://plantuml.com/class-diagram
class InventoryTracker{
    main()
    start()
}
class SceneManager{
    scene: Map<String,Scene>

    load()
    getScene(String): scene
}
class MainWindowController implements Initializable{
    -items: ItemModel
    -sceneManager: SceneManager
    -inventoryItemTableView: TableView<Item>
    -itemSerialNumberColumn: TableColumn<Item,String>
    -itemNameColumn: TableColumn<Item,String>
    -valueItemColumn: TableColumn<Item,Double>


    +MainWindowController(ItemModel, SceneManager)
    +initialize(URL,ResourceBundle)
    +changeSerialNumberCellEvent(TableColumn.CellEditEvent)
    +changeItemNameCellEvent(TableColumn.CellEditEvent)
    +changeItemPriceCellEvent(TableColumn.CellEditEvent)
    +addItemButtonClicked(EventHandler)
    +HandleSaveClicked(EventHandler)
    +HandleLoadClicked(EventHandler)

    +deleteItemButtonClicked(EventHandler)

}
class AddItemWindowController{
    -itemModel: ItemModel
    -sceneManager: SceneManager

    -serialNumberTextField: TextField
    -itemNameTextField: TextField
    -itemPriceTextField: TextField

    +AddItemWindowController(ItemModel, SceneManager)
    +AddItemWindowButtonClicked(ActionEvent)

}
class ItemModel{
    - itemlist: ObservableList<Item>

    +getItemList(): ObservableList<Item>
    +setItemList(ObservableList<Item>)
    +addItem(String, String, Double)
    +deleteItem(Item)

}
class Item{
    -name: SimpleStringProperty
    -serialNumber: SimpleStringProperty
    - price : SimpleDoubleProperty

    +Item(String, String, Double)

    +getName(): String
    +setName(String)
    +nameProperty(): SimpleStringProperty
    +getSerialNumber(): String
    +setSerialNumber(String)
    +serialNumberProperty(): SimpleStringProperty
    +getPrice(): double
    +setPrice(double)
    +priceProperty(): SimpleDoubleProperty
}
class FileManager{
    saveAsCSV()
    saveAsHTML()
    saveAsJSON()
}
openjfx.org.Application <|-- InventoryTracker
InventoryTracker -- SceneManager
SceneManager -- MainWindowController
SceneManager -- AddItemWindowController
MainWindowController o-- ItemModel
MainWindowController o-- Item
AddItemWindowController o-- ItemModel
ItemModel *-- Item
@enduml